Added a button for admins to delete computers, will later go in and add form to add computers.
