# backend/app/config/swagger_output.json
@@ -582,10 +582,16 @@
             "schema": {
               "type": "object",
               "properties": {
+                "userId": {
+                  "example": "any"
+                },
                 "portId": {
                   "example": "any"
                 },
                 "model": {
+                  "example": "any"
+                },
+                "serialNumber": {
                   "example": "any"
                 }
               }
@@ -629,6 +635,39 @@
             "in": "path",
             "required": true,
             "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/computerDestroy/": {
+      "delete": {
+        "tags": [
+          "computer"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "computerId": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
