# backend/app/controllers/computer.controller.js
@@ -1,5 +1,6 @@
 const db = require("..");
 const Computer = db.computer;
+const Event = db.event;
 const utils = require("../config/utils.js");
 exports.create = (req, res) => {
   // #swagger.tags = ['computer']
@@ -7,13 +8,17 @@ exports.create = (req, res) => {
     !utils.isBodyValid(req, res, {
       portId: "integer",
       model: "string",
+      serialNumber: "string",
+      userId: "integer",
     })
   ) {
     return;
   }
+  const userId = req.body.userId;
   const computer = {
     portId: req.body.portId,
     model: req.body.model,
+    serialNumber: req.body.serialNumber,
   };
   Computer.create(computer)
     .then((data) => {
@@ -23,6 +28,10 @@ exports.create = (req, res) => {
       res.status(500).send({
         message: err.message || "Some error occurred while creating the Computer.",
       });
+    });
+    Event.create({
+      eventTypeId: utils.COMPUTER_CREATED_EVENT_ID,
+      userId: userId,
     });
 };
 
@@ -58,3 +67,31 @@ exports.findOne = (req, res) => {
       });
     });
 };
+
+exports.destroy = (req,res) => {
+  // #swagger.tags = ['computer']
+  const computerId = req.body.computerId;
+  const userId = req.body.userId;
+  Computer.destroy({
+    where: { computerId: computerId },
+  }).then((data) => {
+    if (data) {
+      res.status(200).send({
+        message: `Computer deleted`,
+      });
+    } else {
+      res.status(500).send({
+        message: `Cannot find Computer with id=${computerId}.`,
+      });
+    }
+  })
+  .catch((err) => {
+    res.status(500).send({
+      message: "Error deleting Computer with id=" + computerId,
+    });
+  });
+  Event.create({
+    eventTypeId: utils.COMPUTER_DELETED_EVENT_ID,
+    userId: userId,
+  });
+}
